--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(purrr,map_dfr)
 importFrom(purrr,pmap_dfr)
+importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(stats,setNames)
 importFrom(tibble,tibble)
+importFrom(utils,head)
