--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -5,7 +5,8 @@ on:
     branches: [ master, main ]
   pull_request:
     branches: [ master, main ]
-
+  workflow_dispatch:
+  
 jobs:
   test-coverage:
     runs-on: ubuntu-latest
