--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -6,23 +6,23 @@ on:
   pull_request:
     branches: [ master, main ]
   workflow_dispatch:
-  
+
 jobs:
   test-coverage:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
-
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
-
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::covr
           needs: coverage
-
       - name: Run tests and upload to Codecov
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         run: |
-          Rscript -e 'covr::codecov()'
+          Rscript -e 'covr::codecov(token = Sys.getenv("CODECOV_TOKEN"), quiet = FALSE)'
+
